src/main/resources/Krakatau-master/tests/assembler/bad/constnospace.j
.class public whocares
.super java/lang/Object
.const[1] = Int 4
.end class
